@@ -6,6 +6,7 @@ TEST_ENVIRONMENT=false
 ES_BEATS?=./vendor/github.com/elastic/beats
 GOPACKAGES=$(shell glide novendor)
 PREFIX?=.
+NOTICE_FILE=NOTICE
 
 # Path to the libbeat Makefile
 -include $(ES_BEATS)/metricbeat/Makefile
