@@ -1,0 +1,5 @@
+{{cookiecutter.beat}}
+Copyright 2017 {{cookiecutter.full_name}}
+
+This product includes software developed by The Apache Software
+Foundation (http://www.apache.org/).
